# a2a-agent-certainty-extension

./: .gitignore  README.md  pyproject.toml
docs/v1/: spec.md
examples/openai_adapter/: README.md  trivia.py
src/a2a_agent_certainty_extension/: executors.py  extension.py
tests/: fixtures.py  test_exectutors.py  test_extension.py
