[project]
name = "a2a-agent-certainty-extension"
version = "0.1.0"
description = "Provide certainty rating to inter agent communication"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "a2a-sdk>=0.3.24",
]

[project.scripts]
trivia = "examples.openai_adapter.trivia:cli"

[dependency-groups]
dev = [
    "a2a-agent-certainty-extension",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.4",
    "uvicorn>=0.41.0",
]
examples = [
    "openai>=2.26.0",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.pytest.ini_options]
addopts = "--cov=src --cov-report=term-missing"
testpaths = ["tests"]

[build-system]
requires = ["uv_build>=0.10.2,<0.11.0"]
build-backend = "uv_build"
